[package]
name = "free-room-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ical = "0.9.0"
reqwest = "0.11.23"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.2"
thiserror = "1.0.53"
actix-web = "4.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
actix-cors = "0.6.5"
